# chipchip

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  technical_proposal.md
data/: create_tables_poc.sql  generate_sample_data_poc.py  init_db.sh
docs/: README.md  technical_proposal.md
notebooks/: CHIPCHIP_AI_Agent_Development.ipynb
src/: .env.example  main.py
src/api/endpoints/: chat.py
src/core/: config.py  llm_config.py
src/schemas/: chat_schemas.py
src/services/: agent_service.py
