[project]
name = "chipchip"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdulmunim",email = "66489217+abdulmunimjemal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
