[project]
name = "chipchip"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdulmunim",email = "66489217+abdulmunimjemal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "clickhouse-connect (>=0.8.17,<0.9.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "faker (>=37.3.0,<38.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "clickhouse-sqlalchemy (>=0.3.2,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "redis (>=6.2.0,<7.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

